--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -2,11 +2,45 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.truluck</groupId>
-    <artifactId>back-end</artifactId>
-    <version>1.0-SNAPSHOT</version>
+  <groupId>org.truluck</groupId>
+  <artifactId>back-end</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
-    
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.4.2</version> <!-- Check for the latest version -->
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>2.4.2</version>
+    </dependency>
+<!--    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>2.4.2</version>
+    </dependency>
+    &lt;!&ndash; PostgreSQL Driver dependency &ndash;&gt;
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.18</version> &lt;!&ndash; Check for the latest version &ndash;&gt;
+    </dependency>-->
+
+  </dependencies>
+  <properties>
+    <java.version>17</java.version>
+
+
+  </properties>
+
+
+
+
 </project>
